# bughouse

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml  deploy-frontend.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: routes.rs
backend/src/game/: board.rs  types.rs
backend/src/ws/: handler.rs  messages.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  env.ts
frontend/src/components/board/: ChessBoard.tsx
frontend/src/hooks/: useChessground.ts
frontend/src/pages/: GamePage.tsx
frontend/src/store/: game.ts
frontend/src/styles/: board.css
frontend/src/ws/: client.ts
protocol/: messages.ts
